apps/core-services/longhorn/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: core-services
spec:
  tls:
  - secretName: cert-dev.skyloft.cc
  rules:
  - host: storage.dev.skyloft.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
